--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "MAIN.C": "cpp",
-        "bl0942.h": "c"
+        "bl0942.h": "c",
+        "API_Uart_BRGRL_MG82F6D17.H": "cpp"
     }
 }
